--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
       <h2 class="text-3xl font-bold text-center text-blue-900 mb-12">Our Projects</h2>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-white shadow rounded-lg overflow-hidden">
-          <div class="project-img" style="background-image:url('https://i.imgur.com/U8cQq7X.jpeg');"></div>
+          <div class="project-img" style="background-image:url('https://i.imgur.com/pRZfT9v.jpeg');"></div>
           <div class="p-6">
             <h3 class="font-semibold text-lg">Borehole & Water Access</h3>
             <p class="mt-2 text-sm">Clean water for 1,000+ residents, ending long treks for unsafe water.</p>
           </div>
         </div>
         <div class="bg-white shadow rounded-lg overflow-hidden">
-          <div class="project-img" style="background-image:url('https://i.imgur.com/3CjFddB.jpeg');"></div>
+          <div class="project-img" style="background-image:url('https://i.imgur.com/QxTtWfO.jpeg');"></div>
           <div class="p-6">
             <h3 class="font-semibold text-lg">Library & Learning Center</h3>
             <p class="mt-2 text-sm">Renovated library with 2,000+ books, literacy programs, and tutoring.</p>
           </div>
         </div>
         <div class="bg-white shadow rounded-lg overflow-hidden">
-          <div class="project-img" style="background-image:url('https://i.imgur.com/9FJ8HGa.jpeg');"></div>
+          <div class="project-img" style="background-image:url('https://i.imgur.com/iQxEFHS.jpeg');"></div>
           <div class="p-6">
             <h3 class="font-semibold text-lg">Upcoming Kitchen & Cafeteria</h3>
             <p class="mt-2 text-sm">Launching October 2025 to provide daily nutritious meals to students.</p>
@@ -161,10 +161,14 @@
     <div class="max-w-7xl mx-auto">
       <h2 class="text-3xl font-bold text-center text-blue-900 mb-12">Gallery</h2>
       <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-        <div class="gallery-img" style="background-image:url('https://i.imgur.com/U8cQq7X.jpeg');"></div>
-        <div class="gallery-img" style="background-image:url('https://i.imgur.com/9FJ8HGa.jpeg');"></div>
-        <div class="gallery-img" style="background-image:url('https://i.imgur.com/3CjFddB.jpeg');"></div>
-        <div class="gallery-img" style="background-image:url('https://i.imgur.com/QSdh34c.jpeg');"></div>
+        <div class="gallery-img" style="background-image:url('https://i.imgur.com/VeLSpzp.jpeg');"></div>
+        <div class="gallery-img" style="background-image:url('https://i.imgur.com/40wTlx8.jpeg');"></div>
+        <div class="gallery-img" style="background-image:url('https://i.imgur.com/EyfCdAd.jpeg');"></div>
+        <div class="gallery-img" style="background-image:url('https://i.imgur.com/mZngTzh.jpeg');"></div>
+        <div class="gallery-img" style="background-image:url('https://i.imgur.com/ertpDvf.jpeg');"></div>
+        <div class="gallery-img" style="background-image:url('https://i.imgur.com/6IiHigz.jpeg');"></div>
+        <div class="gallery-img" style="background-image:url('https://i.imgur.com/hI8mk3d.jpeg');"></div>
+        <div class="gallery-img" style="background-image:url('https://i.imgur.com/FWyctcJ.jpeg');"></div>
       </div>
     </div>
   </section>
